MJ (adding changes by Spyros Voulgaris) 16/02/2005
- DegreeStats now uses the (now correct) degree method instead of the size
  of the returned neighbor list.

MJ (adding changes by Spyros Voulgaris) 15/02/2005
- OverlayNetwork had bugs: degree and getNeighbours did not conform
  to the contract that only those links count for which both ends
  are up. Fixed that. this means, degree(i) will return the number of
  neighbors that are up, and will return 0 if node i is down. Similarly,
  getNeighbours(i) returns an empty list if node i is down.

MJ 02/02/2005
- peersim.vetor.Normalizer now handles all zero vectors by throwing
  an exception.

MJ 01/02/2005
- added the "undirected" option to WireFromFile, which makes it possible
  to convert a directed graph stored in a file to an undirected one.

MJ 22/01/2005
- Moved the wiring algorithm from WireScaleFreeBA to GraphFactory
  and added the possibility to generate a directed version.
  Now, the "undirected" config parameter has to be given to get
  an unirected graph. This breaks backwards compatibility, but I prefer
  to have a consistent set of parameters for the wiring classes.
  Also, some pretty printing changes on some wiring classes.

AM 19/01/2005
- Fixed a bug in ClassFinder, that was preventing it to run on
  Windows.
- Added a mechanism for running a class that implements both
  the CDProtocol and EDProtocol interface just as an EDProtocol.
- Now the prototype node has an index of -1 (to avoid confusion
  with node with index 0)

MJ 09/01/2005
- Fixed a bug in PeakDistribution: it did not initialize as many nodes
  as the number of peaks. Eg with one peak, one node is not initialized.

MJ 06/01/2005
VERSION 0.3 RELEASED
------------------------------------------------------------------
------------------------------------------------------------------

MJ 04/01/2005
- Minor changes to make some docs consistent with actual behavior and
  vice versa

AM 02/01/2005